Fix overflowing content on zoom

--- a/app/styles/scss/_components/_sidebar.scss
+++ b/app/styles/scss/_components/_sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   height: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: $space-xl;
   display: flex;
   justify-content: center;
